--- a/docker_rules.yaml
+++ b/docker_rules.yaml
@@ -1,6 +1,6 @@
-- rule: Dummy Rule
-  desc: Dummy Rule
-  condition: docker.status in (start,create,die)
+- rule: Container status changed
+  desc: Container status changed
+  condition: docker.status in (create,start,die)
   output: status=%docker.status from=%docker.from type=%docker.type action=%docker.action name=%docker.attributes.name 
   priority: DEBUG
   source: docker
