--- a/falco.yaml
+++ b/falco.yaml
@@ -1,7 +1,7 @@
 plugins:
   - name: docker
     library_path: /etc/falco/docker/libdocker.so
-    init_config: ''
+    init_config: '{"flush_interval": 1}'
     open_params: ''
 
 load_plugins: [docker]
