--- a/falco.yaml
+++ b/falco.yaml
@@ -1,7 +1,9 @@
 plugins:
   - name: docker
     library_path: /usr/share/falco/plugins/libdocker.so
-    init_config: '{"flushinterval": 1}'
+    # init_config: '{"flushinterval": 1}'
+    init_config:
+      flushinterval: 10000
     open_params: ''
 
 load_plugins: [docker]
