--- a/falco.yaml
+++ b/falco.yaml
@@ -1,9 +1,7 @@
 plugins:
   - name: docker
     library_path: /usr/share/falco/plugins/libdocker.so
-    # init_config: '{"flushinterval": 1}'
-    init_config:
-      flushinterval: 10000
+    init_config: '{"flushinterval": 50}'
     open_params: ''
 
 load_plugins: [docker]
