--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,7 @@ on:
       - '*'
   
 env:
-  REGISTRY: ghcr.io
+  OCI_REGISTRY: ghcr.io
   PLUGIN_NAME: docker
     
 permissions:
@@ -17,39 +17,50 @@ jobs:
   publish-oci-artifacts:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Falcoctl Repo
+        uses: actions/checkout@v3
+        with:
+          repository: falcosecurity/falcoctl
+          ref: main
+          path: tools/falcoctl
+      - name: Setup Golang
+        uses: actions/setup-go@v4
+        with:
+          go-version: '^1.20'
+          cache-dependency-path: tools/falcoctl/go.sum
+      - name: Build falcoctl
+        run: make
+        working-directory: tools/falcoctl
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
-      - name: Setup Golang
-        uses: actions/setup-go@v3
-        with:
-          go-version: '1.19'
+          path: plugin
       - name: Build the plugin
         run: make build
-      - uses: oras-project/setup-oras@v1
-      - name: Auth to GHCR
-        run: echo ${{ secrets.GITHUB_TOKEN }} | oras login ghcr.io -u ${{ github.repository_owner }} --password-stdin
-      - id: ToLowerRepoName
+        working-directory: plugin
+      - id: StringRepoName
         uses: ASzc/change-string-case-action@v5
         with:
           string: ${{ github.repository }}
-      - name: Create archives
-        shell: bash
-        run: |
-          tar cvzf lib${{ env.PLUGIN_NAME }}.so.tar.gz lib${{ env.PLUGIN_NAME }}.so
-          tar cvzf ${{ env.PLUGIN_NAME }}_rules.yaml.tar.gz rules/${{ env.PLUGIN_NAME }}_rules.yaml
       - name: Upload OCI artifacts to GitHub packages
-        shell: bash
         run: |
-          echo "{\"name\":\"${{ env.PLUGIN_NAME }}\",\"version\":\"${{ github.ref_name }}\"}" > config.json
-          oras push ${{ env.REGISTRY }}/${{ steps.ToLowerRepoName.outputs.lowercase }}/plugin/${{ env.PLUGIN_NAME }}:${{ github.ref_name }},latest \
-          --config config.json:application/vnd.cncf.falco.plugin.config.v1+json \
-          ./lib${{ env.PLUGIN_NAME }}.so.tar.gz:application/vnd.cncf.falco.plugin.layer.v1+tar.gz
-          echo "{\"name\":\"${{ env.PLUGIN_NAME }}-rules\",\"version\":\"${{ github.ref_name }}\"}" > config.json
-          oras push ${{ env.REGISTRY }}/${{ steps.ToLowerRepoName.outputs.lowercase }}/ruleset/${{ env.PLUGIN_NAME }}:${{ github.ref_name }},latest \
-           --config config.json:application/vnd.cncf.falco.rulesfile.config.v1+json \
-           ./${{ env.PLUGIN_NAME }}_rules.yaml.tar.gz:application/vnd.cncf.falco.rulesfile.layer.v1+tar.gz
+              tools/falcoctl/falcoctl registry push \
+              --config /dev/null \
+              --type plugin \
+              --version "${{ github.ref_name }}" \
+              ${{ env.OCI_REGISTRY }}/${{ steps.StringRepoName.outputs.lowercase }}/plugin/${{ env.PLUGIN_NAME }}:${{ github.ref_name }} \
+              --tag latest \
+              --platform linux/amd64 \
+              plugin/lib${{ env.PLUGIN_NAME }}.so
+              
+              tools/falcoctl/falcoctl registry push \
+              --config /dev/null \
+              --type rulesfile \
+              --version "${{ github.ref_name }}" \
+              --tag latest \
+              ${{ env.OCI_REGISTRY }}/${{ steps.StringRepoName.outputs.lowercase }}/ruleset/${{ env.PLUGIN_NAME }}:${{ github.ref_name }} plugin/rules/${{ env.PLUGIN_NAME }}_rules.yaml
+        env:
+          FALCOCTL_REGISTRY_AUTH_BASIC: ${{ env.OCI_REGISTRY }},${{ github.repository_owner }},${{ secrets.GITHUB_TOKEN }}
 
   release:
     runs-on: ubuntu-latest
