--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,23 +50,27 @@ jobs:
 
               cd plugin/
               $DIR/tools/falcoctl/falcoctl registry push \
+              ${{ env.OCI_REGISTRY }}/${{ steps.StringRepoName.outputs.lowercase }}/plugin/${{ env.PLUGIN_NAME }}:${{ github.ref_name }} \
               --config /dev/null \
               --type plugin \
               --version "${{ github.ref_name }}" \
-              ${{ env.OCI_REGISTRY }}/${{ steps.StringRepoName.outputs.lowercase }}/plugin/${{ env.PLUGIN_NAME }}:${{ github.ref_name }} \
               --tag latest --tag $MAJOR --tag $MINOR \
               --platform linux/amd64 \
               --requires plugin_api_version:2.0.0 \
+              --depends-on ${{ env.PLUGIN_NAME }}-rules:${{ github.ref_name }} \
+              --name ${{ env.PLUGIN_NAME }} \
               lib${{ env.PLUGIN_NAME }}.so
-
+              
               cd rules/
               $DIR/tools/falcoctl/falcoctl registry push \
+              ${{ env.OCI_REGISTRY }}/${{ steps.StringRepoName.outputs.lowercase }}/ruleset/${{ env.PLUGIN_NAME }}:${{ github.ref_name }} \
               --config /dev/null \
               --type rulesfile \
               --version "${{ github.ref_name }}" \
               --tag latest --tag $MAJOR --tag $MINOR \
               --depends-on ${{ env.PLUGIN_NAME }}:${{ github.ref_name }} \
-              ${{ env.OCI_REGISTRY }}/${{ steps.StringRepoName.outputs.lowercase }}/ruleset/${{ env.PLUGIN_NAME }}:${{ github.ref_name }} ${{ env.PLUGIN_NAME }}_rules.yaml
+              --name ${{ env.PLUGIN_NAME }}-rules \
+              ${{ env.PLUGIN_NAME }}_rules.yaml
         env:
           FALCOCTL_REGISTRY_AUTH_BASIC: ${{ env.OCI_REGISTRY }},${{ github.repository_owner }},${{ secrets.GITHUB_TOKEN }}
 
