--- a/rules/docker_rules.yaml
+++ b/rules/docker_rules.yaml
@@ -1,3 +1,8 @@
+---
+- required_plugin_versions:
+  - name: docker
+    version: 0.4.0
+
 - rule: Container status changed
   desc: Container status changed
   condition: docker.status in (create,start,die)
